2009-12-02  Yusuke Sato  <yusukes@chromium.org>

Reviewed by Dan Bernstein.

        Safari/Chromium for Windows fails to load CJK WebFonts
        https://bugs.webkit.org/show_bug.cgi?id=31804

        * platform/graphics/opentype/OpenTypeUtilities.cpp:
        (WebCore::renameAndActivateFont): Load a remote font even if the font has 2 or more faces.

Canonical link: https://commits.webkit.org/43032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51605 268f45cc-cd09-0410-ab3c-d52691b4dbfc